--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Django==1.11
+django-bootstrap3==11.0.0
+django-bootstrap4==0.0.8
+django-tinymce==2.8.0
+Pillow==6.0.0
+psycopg2==2.8.2
 pytz==2019.1
